# TP_MIPT_task2

./: CMakeLists.txt  README.md
A/: preparing.py
B/: CMakeLists.txt  lib.cpp  lib.h
C/: main.cpp  main.h
